# easy-scrape

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  crawlers.md  getting_started.md  middlewares_pipelines.md  roadmap.md  troubleshooting.md
easy_scrape/: cli.py
easy_scrape/core/: __init__.py  browser.py  crawler.py  downloader.py  middleware.py  pipeline.py  request.py  response.py  runner.py
easy_scrape/crawlers/: __init__.py  example_crawler.py
easy_scrape/middlewares/: __init__.py  user_agent.py
easy_scrape/pipelines/: __init__.py  print_pipeline.py
examples/: run_example.py
